<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"

            android:inputType="textPersonName|textCapWords"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textUserAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/amount"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/textUserName"
            app:layout_constraintStart_toStartOf="@+id/textUserName"
            app:layout_constraintTop_toBottomOf="@+id/textUserName">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textUserCollected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/collected"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/textUserAmount"
            app:layout_constraintStart_toStartOf="@+id/textUserAmount"
            app:layout_constraintTop_toBottomOf="@+id/textUserAmount">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.textfield.TextInputEditText>
</com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textUserBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/balance"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/textUserCollected"
            app:layout_constraintStart_toStartOf="@+id/textUserCollected"
            app:layout_constraintTop_toBottomOf="@+id/textUserCollected">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_picked_date"
            android:layout_width="334dp"
            android:layout_height="45dp"
            android:hint="@string/date"
            android:padding="5dp"
            app:layout_constraintEnd_toStartOf="@+id/button_pick_date"
            app:layout_constraintRight_toLeftOf="@+id/button_pick_date"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textUserBalance" />


        <ImageButton
            android:id="@+id/button_pick_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
            android:src="@drawable/calendar_month_db"
            app:layout_constraintEnd_toEndOf="@id/textUserBalance"
            app:layout_constraintLeft_toRightOf="@id/tv_picked_date"
            app:layout_constraintTop_toBottomOf="@+id/textUserBalance" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="@+id/button_pick_date"
            app:layout_constraintTop_toBottomOf="@+id/button_pick_date" />


    </androidx.constraintlayout.widget.ConstraintLayout>
