<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        style="?attr/materialCardViewElevatedStyle"
        app:cardUseCompatPadding="true"
        android:focusable="true"
        app:cardBackgroundColor="?attr/colorSurfaceContainerLow"
        app:rippleColor="?attr/colorOnSurfaceVariant"
        app:contentPadding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                app:tint="@color/material_dynamic_tertiary50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_water_drop_24" />

            <TextView
                android:id="@+id/textName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/name"
                android:textAppearance="?attr/textAppearanceTitleLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linear_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@id/textName">

                <TextView
                    android:id="@+id/tvAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="3"
                    android:text="@string/amount_paid"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="?android:attr/textColorSecondary">

                </TextView>

                <TextView
                    android:id="@+id/textAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/amount"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="?android:attr/textColorSecondary" />
                <!--                    app:layout_constraintEnd_toEndOf="parent"-->
                <!--                    app:layout_constraintStart_toEndOf="@+id/imageView"-->
                <!--                    app:layout_constraintTop_toBottomOf="@+id/textName" />-->
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/linear_one">

                <TextView
                    android:id="@+id/tvCollected"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="3"
                    android:text="@string/buckets_collected"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="?android:attr/textColorSecondary">

                </TextView>

                <TextView
                    android:id="@+id/textCollected"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/collected"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="?android:attr/textColorSecondary"/>
                <!--                    app:layout_constraintEnd_toEndOf="parent"-->
                <!--                    app:layout_constraintStart_toEndOf="@+id/imageView"-->
                <!--                    app:layout_constraintTop_toBottomOf="@+id/textAmount" />-->
            </LinearLayout>

            <LinearLayout
                android:id="@id/linear_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/linear_two">

                <TextView
                    android:id="@+id/tvBalance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="3"
                    android:text="@string/buckets_balance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="?android:attr/textColorSecondary">

                </TextView>

                <TextView
                    android:id="@+id/textBalance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/balance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="?android:attr/textColorSecondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"/>
                <!--                app:layout_constraintTop_toBottomOf="@+id/textCollected" />-->
            </LinearLayout>

            <TextView
                android:id="@+id/textDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/date"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@id/linear_three" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</FrameLayout>